[package]
authors = ["Sydney-o9 <anthony.rey21@gmail.com>"]
edition = "2021"
name = "manning-lp-async-rust-project-1-assignment-m1"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "3.1.8", features = ["derive"]}
yahoo_finance_api = { version = "1.1", features = ["blocking"] }